# PIC-tools

./: .gitignore  LICENSE  README.md  README.rst  draw_dist.py
CPP/: configure.ac  doxygen.cfg
CPP/m4/: acx_python.m4
CPP/src/: Makefile.am  array2D.h  dist.cc  dist.h  field.cc  field.h  para.cc  para.h  particle.cc  particle.h  picpt.cc  pyplot.cc  pyplot.h  tracer.cc  tracer.h
IDL/: DistNASA.pro  Distribution.pro  DrawNASA.pro  Field.pro  FieldLANL.pro  FieldNASA.pro  ParticleDistribution.pro  draw_pic.pro
Python/: draw_dist.py  draw_field.py  draw_field_gui.py  draw_pic.py  draw_pic_gui.py  draw_trace.py  pic_draw.py
Python/Figure/: Figure2D.py  Figure3D.py  __init__.py
Python/GUI/: D2D.py  D3D.py  F1D.py  F2D.py  __init__.py  mplFig.py
Python/PIC/: DistNASA.py  FieldLANL.py  FieldNASA.py  __init__.py
Python/SymPy/: PIC_Integrator_Methods.ipynb  PIC_Integrator_Methods.py
Python/doc/source/: GUI.rst  PIC.rst  conf.py  index.rst  main.rst
Python/doc/source/Figure/: index.rst
Python/doc/source/GUI/: Distribution.rst  Field.rst  index.rst  mplFig.rst
Python/doc/source/PIC/: LANL.rst  NASA.rst  index.rst
